# drone-atlas

./: .gitattributes  .gitignore  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/demo/: README.md
scripts/: download_models.py
src/drone_atlas/: __init__.py  cli.py  detector.py  media.py
tests/: conftest.py  test_cli.py  test_detector.py
