[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-atlas"
version = "0.1.0"
description = "A headless OpenCV/YOLOv3 image and video object-detection prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.8,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
drone-atlas = "drone_atlas.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
